added missing translation

--- a/Resources/translations/FOSMessageBundle.it.yml
+++ b/Resources/translations/FOSMessageBundle.it.yml
@@ -20,3 +20,5 @@ goto_last:      Vedere l’ultimo messaggio
 on:             Il %date%
 by:             Di %sender%
 no_thread:      Nessuna conversazione
+
+body: Messaggio
